# Weather-Monitor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/test_web/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/test_web/src/lib/: api.ts  colors.ts  wmo-codes.ts
apps/test_web/src/pages/: _app.tsx  index.tsx
apps/test_web/src/styles/: globals.css
apps/test_web/src/types/: api.ts
apps/web/: package-lock.json  package.json  tailwind.config.js
apps/web/src/contexts/: ThemeContext.tsx
apps/web/src/hooks/: useAnomalyData.ts  useGlobalFilter.ts  useWeatherData.ts
apps/web/src/pages/: _app.tsx  _document.tsx  index.tsx  map.tsx
apps/web/src/services/: anomaly.service.ts  api.ts  city.service.ts  weather.service.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: anomaly.d.ts  city.d.ts  common.d.ts  weather.d.ts
data-pipeline/: Dockerfile  requirements.txt
data-pipeline/fetchers/: .cache.sqlite  Collect_RealTime.py  VietNam.csv  cities_1500.csv  city.txt  city_id.csv  collectData.py  daily_data.csv  se.ipynb  see_and_test.ipynb  t.py  test.py
docs/: descriptions.txt  workflow.html  workflow.txt
infra/docker/: api.Dockerfile
infra/supabase/: schema.sql
ml/: requirements.txt
scripts/: setup.ps1
services/api/: main.py  requirements.txt
services/api/app/core/: cache.py  config.py  database.py
services/api/app/ml/: anomaly.py  forecast.py  summary.py
services/worker/: worker.py
(+31 files in other folders)
