[project]
name = "weather-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "numpy==2.0.1",
    "pandas==2.2.2",
    "python-dotenv==1.0.1",
    "redis==5.0.8",
    "scikit-learn==1.5.1",
    "supabase==2.6.0",
    "uvicorn[standard]==0.30.6",
]

[tool.pyright]
pythonVersion = "3.12"
extraPaths = ["services/api"]

[tool.ruff]
src = ["services/api"]
